# flb-automation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CALIBRATION_LOG.md  CLAUDE.md  Dockerfile  README.md  allurerc.json  execution_summary.md  failed_tests.md  framework_review.md  metrics.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
browser/: README.md  nbr_ui.py
browser/checks/: __init__.py  accessibility_scan.py  build_flb_jobs_linux_batch.py  capture_evidence_pair.py  check_backup_copy_recovery.py  check_delete_all_recovery_points.py  check_flb_wizard_smoke.py  check_flr_file_share.py  check_flr_flow.py  check_flr_folder_browse.py  check_fsb_wizard_smoke.py  check_global_search_backup_copy.py  check_global_search_flr.py  check_global_search_run_job.py  check_immutability_calibration.py  check_inclusion_exclusion_validation.py  check_job_management_delete.py  check_job_status_polling.py  check_njm_122652.py  check_options_step_extended.py  check_overwrite_behavior_combo.py  check_repository_reclaim_and_selfheal.py  check_select_items_dialog.py  cleanup_auto_flb_jobs.py  diag_flr_reopen_timeout.py  framework_doctor.py  health_check.py
browser/config/: ui_config.example.json  ui_config_fsb.example.json  ui_values.json
browser/pom/: __init__.py  backup_copy_page.py  base_page.py  data_protection_page.py  driver.py  file_level_recovery_page.py  file_share_page.py  flb_wizard_page.py  locators.py  login_page.py  wizard_page.py
browser/pom/backup_types/: __init__.py  backup_copy_page.py  backup_copy_recovery_page.py  file_level_recovery_page.py  file_share_page.py  file_share_recovery_page.py  flb_wizard_page.py
browser/pom/base/: __init__.py  base_page.py  config.py  driver.py  retry.py
browser/pom/common/: __init__.py  alarms_page.py  checksum.py  data_protection_page.py  global_search_page.py  job_management_page.py  licensing_page.py  locators.py  login_page.py  repository_management_page.py  wizard_page.py
cases/: TEMPLATE.md
cases/BetaSmoke_FLB/: NJM-122651.md  NJM-122653.md  NJM-122670.md  NJM-123176.md  NJM-123177.md  NJM-123178.md  NJM-123179.md  NJM-123180.md  NJM-123181.md  NJM-123182.md  NJM-123183.md  NJM-123185.md  NJM-123192.md  NJM-123510.md  NJM-182423.md  NJM-182427.md  NJM-62728.md  NJM-68960.md  NJM-70013.md  NJM-70015.md  NJM-70016.md  NJM-70018.md  NJM-70019.md  NJM-70168.md  NJM-70307.md  NJM-87457.md  NJM-87459.md  NJM-98772.md  NJM-98773.md
cases/CoreFunctional_Backup/: NJM-123117.md  NJM-123119.md  NJM-123121.md  NJM-123123.md  NJM-123129.md  NJM-123274.md  NJM-123509.md  NJM-130057.md  NJM-177964.md  NJM-177965.md  NJM-177966.md  NJM-177967.md  NJM-177968.md  NJM-177971.md  NJM-67682.md  NJM-68916.md  NJM-68933.md  NJM-68934.md  NJM-68955.md  NJM-68956.md  NJM-68960.md  NJM-68967.md  NJM-68975.md  NJM-68976.md  NJM-68980.md  NJM-70013.md  NJM-70016.md  NJM-70019.md  NJM-85728.md  NJM-85730.md  NJM-85733.md  NJM-85746.md  NJM-85749.md  NJM-85758.md
cases/FLBv2v3_IncludeExclude/: NJM-182424.md  NJM-182425.md  NJM-182426.md  NJM-182427.md  NJM-182428.md  NJM-182429.md  NJM-182430.md  NJM-182431.md  NJM-185011.md  NJM-185012.md  NJM-185013.md  NJM-185014.md  NJM-185015.md  NJM-185016.md  NJM-185017.md  NJM-185018.md  NJM-185019.md  NJM-185020.md  NJM-185021.md  NJM-185022.md  NJM-185023.md
cases/FLBv2v3_Inventory/: NJM-67692.md  NJM-67693.md  NJM-67694.md  NJM-67697.md  NJM-67700.md  NJM-67701.md  NJM-67702.md  NJM-67806.md  NJM-67807.md  NJM-67808.md  NJM-67809.md  NJM-67813.md  NJM-67816.md  NJM-67817.md  NJM-68916.md  NJM-68933.md  NJM-68934.md
docs/: EXECUTION_PROMPT.md  allure-reporting.md  ci-secrets.md  configuration.md  enterprise-gap-analysis.md  framework-guide.md  framework-guidelines.md  parametrize-pattern.md  visual-regression-pattern.md  xdist-parallelization.md
recipes/: file-backup-recipes.md
reporting/: README.md  __init__.py  allure_mapper.py  attachments.py  categories.py  config.py  emit.py  environment.py  event_reader.py  events.py  failure_analyzer.py  generate.py  history.py  model.py  runbook_parser.py  serve.py
results/allure-report/: index.html  summary.json
results/allure-report/widgets/: allure_environment.json  charts.json  tree-filters.json
results/allure-results/: 17fc1821-ea0b-47e8-94ea-8bd96d376ad8-result.json  550c0683-223c-401a-9a33-07731877050c-attachment.md  8c350a53-35f2-4222-a3b0-cde640e56e26-attachment.json  categories.json  ce3d4b10-8de1-40e5-b014-bf0344c5246c-attachment.json  environment.properties  executor.json
results/reports/: NJM-67687__20260707.md  fsb-r4c-selfcontained__20260707.md
results/runs/20260707T045615Z__NJM-67687/: journal.jsonl
test-data/: environment.md  test-data.md
test-data/job-templates/: backup_copy_job.template.json  flb_job.template.json  fsb_job.template.json
test-data/manifests/: manifest-almalinux9-mixed.sha256  manifest-changetest-forflb.sha256  manifest-debian12-mixed.sha256  manifest-linux-mixed.sha256  manifest-linux.md5  manifest-linux.sha256  manifest-lockedfile-forflb.sha256  manifest-refs-fscoverage.sha256  manifest-rhel9-mixed.sha256  manifest-rocky9-mixed.sha256  manifest-sles15-mixed.sha256  manifest-ubuntu22-mixed.md5  manifest-ubuntu22-mixed.sha256  manifest-ubuntu22-xfs.md5  manifest-ubuntu22-xfs.sha256  manifest-ubuntu24-mixed.md5  manifest-ubuntu24-mixed.sha256  manifest-win11-mixed.sha256  manifest-win11-specialfiles.sha256  manifest-win2016-mixed.sha256  manifest-win2019-mixed.sha256  manifest-win2022-mixed.sha256  manifest-win2025-mixed.sha256  manifest-windows.md5  manifest-windows.sha256
tests/: conftest.py  test_job_templates.py  test_reporting_pipeline.py  test_runbook_parser.py
tests/e2e/: conftest.py
tests/e2e/_lib/: _shared_helpers.py  _visual_regression.py
tests/e2e/test_flbv2v3_Alarms/: _helpers.py  test_njm_69980.py  test_njm_69981.py  test_njm_69998.py  test_njm_70002.py  test_njm_70005.py
tests/e2e/test_flbv2v3_BackupCopy/: test_njm_123165.py  test_njm_123166.py  test_njm_123169.py  test_njm_123170.py  test_njm_123171.py  (+38 more)
(+289 files in other folders)
