# Tool configuration only — this repo is a QA automation framework, not a distributable Python
# package, so there is deliberately no [build-system]/[project] table here. pytest and ruff both
# read [tool.*] directly from this file regardless.

[tool.pytest.ini_options]
minversion = "8.0"
# --alluredir requires allure-pytest (requirements-dev.txt) — every pytest run appends its
# results here; `allure generate results/allure-results -o results/allure-report` (or
# `allure serve`) renders them.
# --strict-markers rejects any @pytest.mark.* not declared in `markers` below, so a typo'd marker
# fails collection instead of silently doing nothing.
# --video=on (pytest-playwright) records every test's browser session to
# results/test-results/<nodeid>/video.webm; conftest.py's pytest_runtest_makereport hook attaches
# it to the Allure report at teardown, once the browser context (and therefore the video file) has
# finished writing.
addopts = "-ra -q --strict-markers --alluredir=results/allure-results --junitxml=results/junit.xml --video=on --output=results/test-results"
testpaths = ["tests"]
# Inserts the repo root onto sys.path for the test session, so `from browser.pom...` imports
# resolve without installing the project as a package (browser/checks/*.py already does its own
# sys.path manipulation for the same reason — see their `sys.path.insert(...)` lines;
# tests/e2e/conftest.py does the same independently, so this is a redundant safety net there).
pythonpath = ["."]
# Suite/appliance groupings for tests/e2e/ — filter with e.g. `pytest -m include_exclude` or
# `pytest -m flb`. jira(id) tags a test with its source Jira TC key for `-k`/reporting lookup.
markers = [
    "flb: File-Level Backup (physical machine) tests against nbr-84",
    "fsb: File Share Backup tests against nbr-5",
    "include_exclude: FLBv2v3_IncludeExclude suite (NJM-182720)",
    "inventory: FLBv2v3_Inventory suite",
    "beta_smoke: BetaSmoke_FLB suite",
    "jira(id): source Jira test-case key this test covers, e.g. jira('NJM-182424')",
]

[tool.ruff]
# Actual interpreter is 3.14; ruff 0.6.9 (pinned in requirements-dev.txt) doesn't have a "py314"
# target yet — "py313" is the newest it supports, and functionally equivalent for this ruleset.
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E702 (semicolon-chained statements) is a deliberate, pervasive convention in browser/pom/*.py's
# fluent page-object actions (`self.click(...); self.wait(...); return self`) — cosmetic, not a
# bug-risk category (unlike F/E501/UP). Rewriting dozens of already live-verified lines for a
# style-only rule isn't worth the regression risk; excluded deliberately, not by oversight.
ignore = ["E702"]
