# Tool configuration only — this repo is a QA automation framework, not a distributable Python
# package, so there is deliberately no [build-system]/[project] table here. pytest and ruff both
# read [tool.*] directly from this file regardless.

[tool.pytest.ini_options]
minversion = "8.0"
# --alluredir requires allure-pytest (requirements-dev.txt) — every pytest run appends its
# results here; `allure generate results/allure-results -o results/allure-report` (or
# `allure serve`) renders them.
# --strict-markers rejects any @pytest.mark.* not declared in `markers` below, so a typo'd marker
# fails collection instead of silently doing nothing.
# --video=on (pytest-playwright) records every test's browser session to
# results/test-results/<nodeid>/video.webm; conftest.py's pytest_runtest_makereport hook attaches
# it to the Allure report at teardown, once the browser context (and therefore the video file) has
# finished writing.
# --tracing=retain-on-failure (pytest-playwright): captures a full step-by-step trace (DOM
# snapshots, network, console, actionability waits) for failed tests only — near-zero marginal
# cost given --video=on is already accepted, and gives a level of per-step debugging (inspect DOM
# state AT a specific step) that a video alone can't. View with `playwright show-trace
# results/test-results/<nodeid>/trace.zip`.
# --reruns=1 --reruns-delay=10 (pytest-rerunfailures): automates this project's own documented
# "retry once before treating a failure as a real signal" practice (see CLAUDE.md's decision
# rules) — this session hit several genuine appliance-load-induced transient failures (a dialog
# timing out once under load, then passing cleanly seconds later) that were previously retried
# manually every time. A single rerun after a 10s delay matches that established judgment call;
# a SECOND consecutive failure is still a real, reported failure, not silently retried away.
addopts = "-ra -q --strict-markers --alluredir=results/allure-results --junitxml=results/junit.xml --video=on --tracing=retain-on-failure --output=results/test-results --reruns=1 --reruns-delay=10"
testpaths = ["tests"]
# Inserts the repo root onto sys.path for the test session, so `from browser.pom...` imports
# resolve without installing the project as a package (browser/checks/*.py already does its own
# sys.path manipulation for the same reason — see their `sys.path.insert(...)` lines;
# tests/e2e/conftest.py does the same independently, so this is a redundant safety net there).
pythonpath = ["."]
# Suite/appliance groupings for tests/e2e/ — filter with e.g. `pytest -m include_exclude` or
# `pytest -m flb`. jira(id) tags a test with its source Jira TC key for `-k`/reporting lookup.
markers = [
    "flb: File-Level Backup (physical machine) tests against nbr-84",
    "fsb: File Share Backup tests against nbr-5",
    "include_exclude: FLBv2v3_IncludeExclude suite (NJM-182720)",
    "inventory: FLBv2v3_Inventory suite",
    "flrfunctional: FLBv2v3_FLRFunctional suite (NJM-182725)",
    "sourceselection: FLBv2v3_SourceSelection suite (NJM-182719, execution A)",
    "objectstorage: FLBv2v3_ObjectStorage suite (NJM-182721, execution C)",
    "backupexecution: FLBv2v3_BackupExecution suite (NJM-182722, execution D)",
    "flrtosource: FLBv2v3_FLRToSource suite (NJM-182724, execution F, 'FLR to source + overwrite')",
    "alarms: FLBv2v3_Alarms suite (NJM-182728, execution J, 'Alarms / notifications / events')",
    "uireporting: FLBv2v3_UiReporting suite (NJM-182729, execution L, 'UI/UX / l10n / reporting')",
    "beta_smoke: BetaSmoke_FLB suite",
    "jira(id): source Jira test-case key this test covers, e.g. jira('NJM-182424')",
    "xdist_group(name): pytest-xdist grouping (see docs/xdist-parallelization.md) — inert unless pytest-xdist is installed and run with --dist loadgroup",
    "visual_regression_example: demonstrates the Playwright screenshot-diff pattern against a static fixture (see docs/visual-regression-pattern.md) — not live-appliance coverage",
    "config_unit: pure-logic unit tests for browser/pom/base/config.py (see docs/configuration.md) — no browser/appliance access",
]

[tool.ruff]
# Actual interpreter is 3.14; ruff 0.6.9 (pinned in requirements-dev.txt) doesn't have a "py314"
# target yet — "py313" is the newest it supports, and functionally equivalent for this ruleset.
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E702 (semicolon-chained statements) is a deliberate, pervasive convention in browser/pom/*.py's
# fluent page-object actions (`self.click(...); self.wait(...); return self`) — cosmetic, not a
# bug-risk category (unlike F/E501/UP). Rewriting dozens of already live-verified lines for a
# style-only rule isn't worth the regression risk; excluded deliberately, not by oversight.
ignore = ["E702"]

[tool.mypy]
# Lenient baseline: default (non-strict) checking only — no --check-untyped-defs, no
# --disallow-untyped-defs. Most functions in browser/pom/*.py have no return-type annotations
# (see docs/framework-guidelines.md); forcing full annotation coverage now would be a large,
# low-value mechanical change against a codebase whose actual risk is ExtJS UI drift, not type
# errors. This config's job is to catch clear-cut type errors (verified: only 4 existed across 83
# files before this baseline was established, all fixed — see browser/pom/common/wizard_page.py's
# LOC comment) while staying quiet on everything merely untyped. Tighten later (mypy --strict,
# module-by-module) only if type errors actually start recurring.
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["\\.venv/"]
